styles/app.css
/* ... */
@media (max-width: 536px) {

    .articles-grid {
        grid-template-columns: 1fr;
    }

    .newsletter__content {
        flex-direction: column;
    }
}

@media (max-width: 500px) {

    .newsletter__input {
        max-width: 400px;
    }
    
    .newsletter__button {
        position: static;
        display: block;
        margin: 20px auto;
    }

    .about .container {
        padding: 40px;
    }

    .about__title {
        font-size: 30px;
    }
}

@media (max-width: 480px) {

    .hero-content {
        gap: 5px;
    }

    .hero-btn {
        margin: 5px;
    }

    .articles-title {
        font-size: 30px;
    }

    .about__stats {
        margin: auto;
        text-align: center;
    }

    .about__button {
        margin: auto;
    }

    .footer .container {
        grid-template-columns: 1fr;
    }

    .footer__brand {
        margin: auto;
        text-align: center;
    }

    .footer__socials {
        margin: auto;
    }

    .footer__navigation {
        margin: auto;
        text-align: center;
    }

    .footer__categories {
        margin: auto;
        text-align: center;
    }

    .footer__heading {
        text-align: center;
    }
    
}

@media (max-width: 430px) {

    .hero-title {
        font-size: 30px;
        max-width: 260px;
    }

    .newsletter__content {
        margin: auto;
        text-align: center;
    }
}

@media (max-width: 412px) {

    .hero-content {
        padding-top: 1px;
    }

    .hero-title {
        line-height: 34px;
    }

    .hero-description {
        max-width: 210px;
    }

    .hero-btn {
        margin-top: 10px;
    }

    .search-modal {
        max-width: 360px;
    }

    .icon-search-overlay {
        height: 40px;
    }

    .search-modal__title {
        font-size: 30px;
    }

    .search-form {
        flex-direction: column;
    }

    .search-submit {
        position: static;
        margin-top: 5px;
    }

    .article-card__author-info {
        flex-direction: column;
        gap: 1px;
        justify-content: center;
        align-items: center;
    }

    .newsletter__content {
        max-width: 300px;
    }

    .newsletter__label {
        font-size: 30px;
    }

    .newsletter__description {
        font-size: 16px;
        max-width: 384px;
    }

    .newsletter__input {
        max-width: 330px;
    }
}

